# my-tauri-app

./: .env  MACOS_PRIVACY_OVERLAY.md  package-lock.json  package.json
.github/workflows/: macos-build.yml
src/: App.css  App.tsx  privacy-overlay.css  privacy-overlay.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
src/lib/: ws.ts
